exp-parse/func.output
Grammar

    0 $accept: input $end

    1 input: lines EOFTOK

    2 lines: /* empty */
    3      | lines line

    4 line: expression EOLN
    5     | ERROR EOLN
    6     | EOLN

    7 expression: term
    8           | expression PLUS term
    9           | expression MINUS term

   10 term: factor
   11     | term TIMES factor
   12     | term DIVIDED_BY factor

   13 factor: exponential
   14       | exponential RAISED_TO exponential

   15 exponential: number
   16            | Z
   17            | OPEN_PAREN expression CLOSE_PAREN

   18 number: NUMBER
   19       | J


Terminals, with rules where they appear

$end (0) 0
error (256)
RAISED_TO (258) 14
PLUS (259) 8
MINUS (260) 9
TIMES (261) 11
DIVIDED_BY (262) 12
OPEN_PAREN (263) 17
CLOSE_PAREN (264) 17
ERROR (265) 5
EOLN (266) 4 5 6
EOFTOK (267) 1
J (268) 19
Z (269) 16
NUMBER (270) 18


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
input (17)
    on left: 1, on right: 0
lines (18)
    on left: 2 3, on right: 1 3
line (19)
    on left: 4 5 6, on right: 3
expression (20)
    on left: 7 8 9, on right: 4 8 9 17
term (21)
    on left: 10 11 12, on right: 7 8 9 11 12
factor (22)
    on left: 13 14, on right: 10 11 12
exponential (23)
    on left: 15 16 17, on right: 13 14
number (24)
    on left: 18 19, on right: 15


state 0

    0 $accept: . input $end

    $default  reduce using rule 2 (lines)

    input  go to state 1
    lines  go to state 2


state 1

    0 $accept: input . $end

    $end  shift, and go to state 3


state 2

    1 input: lines . EOFTOK
    3 lines: lines . line

    OPEN_PAREN  shift, and go to state 4
    ERROR       shift, and go to state 5
    EOLN        shift, and go to state 6
    EOFTOK      shift, and go to state 7
    J           shift, and go to state 8
    Z           shift, and go to state 9
    NUMBER      shift, and go to state 10

    line         go to state 11
    expression   go to state 12
    term         go to state 13
    factor       go to state 14
    exponential  go to state 15
    number       go to state 16


state 3

    0 $accept: input $end .

    $default  accept


state 4

   17 exponential: OPEN_PAREN . expression CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 4
    J           shift, and go to state 8
    Z           shift, and go to state 9
    NUMBER      shift, and go to state 10

    expression   go to state 17
    term         go to state 13
    factor       go to state 14
    exponential  go to state 15
    number       go to state 16


state 5

    5 line: ERROR . EOLN

    EOLN  shift, and go to state 18


state 6

    6 line: EOLN .

    $default  reduce using rule 6 (line)


state 7

    1 input: lines EOFTOK .

    $default  reduce using rule 1 (input)


state 8

   19 number: J .

    $default  reduce using rule 19 (number)


state 9

   16 exponential: Z .

    $default  reduce using rule 16 (exponential)


state 10

   18 number: NUMBER .

    $default  reduce using rule 18 (number)


state 11

    3 lines: lines line .

    $default  reduce using rule 3 (lines)


state 12

    4 line: expression . EOLN
    8 expression: expression . PLUS term
    9           | expression . MINUS term

    PLUS   shift, and go to state 19
    MINUS  shift, and go to state 20
    EOLN   shift, and go to state 21


state 13

    7 expression: term .
   11 term: term . TIMES factor
   12     | term . DIVIDED_BY factor

    TIMES       shift, and go to state 22
    DIVIDED_BY  shift, and go to state 23

    $default  reduce using rule 7 (expression)


state 14

   10 term: factor .

    $default  reduce using rule 10 (term)


state 15

   13 factor: exponential .
   14       | exponential . RAISED_TO exponential

    RAISED_TO  shift, and go to state 24

    $default  reduce using rule 13 (factor)


state 16

   15 exponential: number .

    $default  reduce using rule 15 (exponential)


state 17

    8 expression: expression . PLUS term
    9           | expression . MINUS term
   17 exponential: OPEN_PAREN expression . CLOSE_PAREN

    PLUS         shift, and go to state 19
    MINUS        shift, and go to state 20
    CLOSE_PAREN  shift, and go to state 25


state 18

    5 line: ERROR EOLN .

    $default  reduce using rule 5 (line)


state 19

    8 expression: expression PLUS . term

    OPEN_PAREN  shift, and go to state 4
    J           shift, and go to state 8
    Z           shift, and go to state 9
    NUMBER      shift, and go to state 10

    term         go to state 26
    factor       go to state 14
    exponential  go to state 15
    number       go to state 16


state 20

    9 expression: expression MINUS . term

    OPEN_PAREN  shift, and go to state 4
    J           shift, and go to state 8
    Z           shift, and go to state 9
    NUMBER      shift, and go to state 10

    term         go to state 27
    factor       go to state 14
    exponential  go to state 15
    number       go to state 16


state 21

    4 line: expression EOLN .

    $default  reduce using rule 4 (line)


state 22

   11 term: term TIMES . factor

    OPEN_PAREN  shift, and go to state 4
    J           shift, and go to state 8
    Z           shift, and go to state 9
    NUMBER      shift, and go to state 10

    factor       go to state 28
    exponential  go to state 15
    number       go to state 16


state 23

   12 term: term DIVIDED_BY . factor

    OPEN_PAREN  shift, and go to state 4
    J           shift, and go to state 8
    Z           shift, and go to state 9
    NUMBER      shift, and go to state 10

    factor       go to state 29
    exponential  go to state 15
    number       go to state 16


state 24

   14 factor: exponential RAISED_TO . exponential

    OPEN_PAREN  shift, and go to state 4
    J           shift, and go to state 8
    Z           shift, and go to state 9
    NUMBER      shift, and go to state 10

    exponential  go to state 30
    number       go to state 16


state 25

   17 exponential: OPEN_PAREN expression CLOSE_PAREN .

    $default  reduce using rule 17 (exponential)


state 26

    8 expression: expression PLUS term .
   11 term: term . TIMES factor
   12     | term . DIVIDED_BY factor

    TIMES       shift, and go to state 22
    DIVIDED_BY  shift, and go to state 23

    $default  reduce using rule 8 (expression)


state 27

    9 expression: expression MINUS term .
   11 term: term . TIMES factor
   12     | term . DIVIDED_BY factor

    TIMES       shift, and go to state 22
    DIVIDED_BY  shift, and go to state 23

    $default  reduce using rule 9 (expression)


state 28

   11 term: term TIMES factor .

    $default  reduce using rule 11 (term)


state 29

   12 term: term DIVIDED_BY factor .

    $default  reduce using rule 12 (term)


state 30

   14 factor: exponential RAISED_TO exponential .

    $default  reduce using rule 14 (factor)
